<resources>
    <string name="app_name">DemoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_product">Search product</string>
    <string name="sneakers">Sneakers</string>
    <string name="_0_products_found">products found</string>
    <string name="nike">Nike</string>
    <string name="label_price">$96</string>
    <string name="label_dec">Air Force 1 Jester XX Black Sonic Yellow …</string>
    <string name="rating">Rating</string>
    <string name="_000">(000)</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>