<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvMain"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_165sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="@dimen/_15sdp"
                    android:src="@drawable/image_1"
                    app:layout_constraintBottom_toTopOf="@+id/txtName"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/nike"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/txtDec"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/label_dec"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintBottom_toTopOf="@+id/txtPrice"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/label_price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_favorite"
                    android:tint="@color/black"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>